--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: |
+          echo $GITHUB_WORKSPACE
           echo "Build"
       - name: Test
         run: |
