--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -9,8 +9,13 @@ jobs:
   create-ec2-instance:
     runs-on: ubuntu-latest
     steps:
-      - name: Configure AWS Credentials
-        uses: actions/checkout@v3
+      # Checkout code from git repo branch configure above
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Sets up AWS profile.  
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
