--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -22,6 +22,6 @@ jobs:
           aws-region: us-east-1
 
       - name: Create EC2 Instance
-        if: ${{ variables.ACTION == 'stop' }}
+        if: ${{ vars.ACTION == 'stop' }}
         run: |
           aws ec2 stop-instances --filters Name=tag:Name,Values=test 
