updating ec2 instance using github actions v10

--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -21,7 +21,10 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Create EC2 Instance
+      - name: get EC2 Instance ID
         if: ${{ vars.ACTION == 'stop' }}
         run: |
-          aws ec2 stop-instances --filters Name=tag:Name,Values=test 
+          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=test --query 'Reservations[*].Instances[*].InstanceId' --output text)
+      - name: Stop EC2 instance
+        run: |
+          aws ec2 stop-instances --instance-ids $instance_id
