updating ec2 instance using github actions v12

--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -27,8 +27,8 @@ jobs:
           aws ec2 run-instances \
             --image-id ami-04cb4ca688797756f \
             --instance-type t2.micro \
+            --subnet-id ${{ variables.SUBNET_ID }}
             --security-group-ids ${{ vars.SECURITY_GROUP_ID }} \
-            --block-device-mappings '[{"DeviceName":"/dev/sda1","Ebs":{"VolumeSize":20,"VolumeType":"gp2"}}]'
             --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=development}]'	
 
       - name: get EC2 Instance ID
