--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -38,5 +38,4 @@ jobs:
       - name: Stop EC2 instance
         if: ${{ vars.ACTION == 'stop' }}
         run: |
-          echo $instance_id
-          aws ec2 stop-instances --instance-ids $instance_id
+          aws ec2 stop-instances --instance-ids aws ec2 describe-instances --filters Name=tag:Name,Values=development1 --query 'Reservations[*].Instances[*].InstanceId' --output text
