--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -35,9 +35,8 @@ jobs:
         run: |
           instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=development1 --query 'Reservations[*].Instances[*].InstanceId' --output text)
           echo $instance_id
-        outputs:
-          instance_id: ${{ steps.get-ec2-instance-id.outputs.instance_id }}
       - name: Stop EC2 instance
+        needs: get EC2 Instance ID
         if: ${{ vars.ACTION == 'stop' }}
         run: |
           aws ec2 stop-instances --instance-ids ${{ steps.get-ec2-instance-id.outputs.instance_id }}
