--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -41,6 +41,7 @@ jobs:
         run: |
           instance_id="${{ steps.get-instance-id.outputs.instance_id }}"
           aws ec2 stop-instances --instance-ids $instance_id
+      - name: Terminate EC2 instance
         if: ${{ vars.ACTION == 'terminate' }}
         run: |
           instance_id="${{ steps.get-instance-id.outputs.instance_id }}"
