updating ec2 instance using github actions v44

--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -45,5 +45,5 @@ jobs:
         if: ${{ vars.ACTION == 'terminate' }}
         run: |
           instance_id="${{ steps.get-instance-id.outputs.instance_id }}"
-          aws ec2 terminate-instances --instance-ids $
+          aws ec2 terminate-instances --instance-ids $instance_id
           
