updating ec2 instance using github actions v46

--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -43,13 +43,13 @@ jobs:
           aws ec2 stop-instances --instance-ids $instance_id
       - name: get EC2 Instance ID
         if: ${{ vars.ACTION == 'terminate' }}
-        id: get-instance-id
+        id: get-terminate-instance-id
         run: |
           instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=development1 --query 'Reservations[*].Instances[*].InstanceId' --output text)
           echo "::set-output name=instance_id::$instance_id"
       - name: Terminate EC2 instance
         if: ${{ vars.ACTION == 'terminate' }}
         run: |
-          instance_id="${{ steps.get-instance-id.outputs.instance_id }}"
+          instance_id="${{ steps.get-terminate-instance-id.outputs.instance_id }}"
           aws ec2 terminate-instances --instance-ids $instance_id
           
