--- a/.github/workflows/create_ec2.yaml
+++ b/.github/workflows/create_ec2.yaml
@@ -30,12 +30,12 @@ jobs:
             --subnet-id ${{ vars.SUBNET_ID }} \
             --security-group-ids ${{ vars.SECURITY_GROUP_ID }} \
             --iam-instance-profile Name=vinoth-ec2-role \
-            --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=development1}]'	
+            --tag-specifications 'ResourceType=instance,Tags=[{Key=Name,Value=dev-test}]'	
       - name: get EC2 Instance ID
         if: ${{ vars.ACTION == 'stop' }}
         id: get-instance-id
         run: |
-          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=development1 --query 'Reservations[*].Instances[*].InstanceId' --output text)
+          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=dev-test --query 'Reservations[*].Instances[*].InstanceId' --output text)
           echo "::set-output name=instance_id::$instance_id"
       - name: Stop EC2 instance
         if: ${{ vars.ACTION == 'stop' }}
@@ -46,11 +46,22 @@ jobs:
         if: ${{ vars.ACTION == 'terminate' }}
         id: get-terminate-instance-id
         run: |
-          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=development1 --query 'Reservations[*].Instances[*].InstanceId' --output text)
+          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=dev-test --query 'Reservations[*].Instances[*].InstanceId' --output text)
           echo "::set-output name=instance_id::$instance_id"
       - name: Terminate EC2 instance
         if: ${{ vars.ACTION == 'terminate' }}
         run: |
           instance_id="${{ steps.get-terminate-instance-id.outputs.instance_id }}"
           aws ec2 terminate-instances --instance-ids $instance_id
+                - name: get EC2 Instance ID
+        if: ${{ vars.ACTION == 'start' }}
+        id: get-start-instance-id
+        run: |
+          instance_id=$(aws ec2 describe-instances --filters Name=tag:Name,Values=dev-test --query 'Reservations[*].Instances[*].InstanceId' --output text)
+          echo "::set-output name=instance_id::$instance_id"
+      - name: Terminate EC2 instance
+        if: ${{ vars.ACTION == 'start' }}
+        run: |
+          instance_id="${{ steps.get-start-instance-id.outputs.instance_id }}"
+          aws ec2 start-instances --instance-ids $instance_id
           
